--- a/_scss/5-why-fastpath-components/_youll-get.scss
+++ b/_scss/5-why-fastpath-components/_youll-get.scss
@@ -20,6 +20,41 @@
   }
 }
 
+@media screen and (max-height: 414px) and (max-width: 736px) {
+  .youll-get {
+    width: 30%;
+    margin-top: -30px;
+  }
+}
+
+@media screen and (max-height: 412px) and (max-width: 732px) {
+  .youll-get {
+    width: 30%;
+    margin-top: -30px;
+  }
+}
+
+@media screen and (max-height: 375px) and (max-width: 667px) {
+  .youll-get {
+    width: 30%;
+    margin-top: -30px;
+  }
+}
+
+@media screen and (max-height: 360px) and (max-width: 640px) {
+  .youll-get {
+    width: 30%;
+    margin-top: -30px;
+  }
+}
+
+@media screen and (max-height: 320px) and (max-width: 568px) {
+  .youll-get {
+    width: 30%;
+    margin-top: -30px;
+  }
+}
+
 .top-pad-tablet {
   margin-top: 0;
 }
