--- a/css/main.css
+++ b/css/main.css
@@ -2018,6 +2018,31 @@ body {
   .youll-get {
     width: 60%; } }
 
+@media screen and (max-height: 414px) and (max-width: 736px) {
+  .youll-get {
+    width: 30%;
+    margin-top: -30px; } }
+
+@media screen and (max-height: 412px) and (max-width: 732px) {
+  .youll-get {
+    width: 30%;
+    margin-top: -30px; } }
+
+@media screen and (max-height: 375px) and (max-width: 667px) {
+  .youll-get {
+    width: 30%;
+    margin-top: -30px; } }
+
+@media screen and (max-height: 360px) and (max-width: 640px) {
+  .youll-get {
+    width: 30%;
+    margin-top: -30px; } }
+
+@media screen and (max-height: 320px) and (max-width: 568px) {
+  .youll-get {
+    width: 30%;
+    margin-top: -30px; } }
+
 .top-pad-tablet {
   margin-top: 0; }
 
@@ -2217,6 +2242,29 @@ body {
     margin-top: 500px;
     width: 160px;
     height: 160px; } }
+
+@media screen and (max-height: 414px) and (max-width: 736px) {
+  .arrow3 {
+    left: 43%;
+    margin-top: 125px; } }
+
+@media screen and (max-height: 412px) and (max-width: 732px) {
+  .arrow3 {
+    left: 43%;
+    margin-top: 110px; } }
+
+@media screen and (max-height: 375px) and (max-width: 667px) {
+  .arrow3 {
+    left: 43%;
+    margin-top: 105px; } }
+
+@media screen and (max-height: 360px) and (max-width: 640px) {
+  .arrow3 {
+    margin-top: 100px; } }
+
+@media screen and (max-height: 320px) and (max-width: 568px) {
+  .arrow3 {
+    margin-top: 75px; } }
 
 body {
   background-color: white;
